fixed overflow on picture grid elements

--- a/mysite/assets/scss/components/_content-entry.scss
+++ b/mysite/assets/scss/components/_content-entry.scss
@@ -40,6 +40,7 @@ $content-entry-text-gutter: 10px;
 
 	&__text {
 		font-size:16px;
+		color: palette-get(na-black);
 		@include handle-text-overflow;
 
 		a {
