--- a/mysite/assets/scss/modules/picture-grid/_entry.scss
+++ b/mysite/assets/scss/modules/picture-grid/_entry.scss
@@ -121,6 +121,7 @@
 			}
 		}
 		text-align: center;
+		overflow: hidden;
 		@include handle-text-overflow;
 		padding: $desktop-padding;
 		position: relative;
