--- a/mysite/assets/scss/modules/post-header/_main.scss
+++ b/mysite/assets/scss/modules/post-header/_main.scss
@@ -2,6 +2,7 @@ $std-post-header-padding-with-image: 70px;
 $std-post-header-padding-without-image: 25px;
 
 .post-header {
+	width: 100%;
 	position:static;
 	margin-top: $desktop-padding;
 
